--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   "dependencies": {
     "@babel/core": "^7.22.20",
     "babel-loader": "^9.1.3",
+    "body-parser": "^1.20.2",
     "clean-webpack-plugin": "^4.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "html-webpack-plugin": "^5.5.3",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1",
     "sass": "^1.67.0",
     "webpack": "^5.88.2",
