--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon src/server.js",
-    "build-dev": "webpack-dev-server --open --config webpack.dev.js",
+    "build-dev": "webpack --config webpack.config.js & yarn start",
     "build-prod": "webpack --config webpack.config.js"
   },
   "author": "",
@@ -20,6 +20,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.7.0",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1",
     "sass": "^1.67.0",
